# AI-49

./: README.md  build.ps1  pyproject.toml
.github/workflows/: up-rule.yaml  update-rule.yml
.lingma/rules/: base.md
60s/: 60s.py
JavaScript/cf49raw/: DEPLOY.md  cf49raw.js  vercel.json
JavaScript/cf49raw/api/: vercel-github-raw.js
JavaScript/vercel-github-raw/: vercel.json
RULE/Action/: china_ip.txt
delnonwebp/: README.md  delnonwebp.ps1
dev/: curl-rule.sh  git-push.sh  process-rule.sh  version-update.py
dns49/: ai.md  dns49.ps1
ico49/: ai.md  ico49.ps1
mihomo/: AWAvenue.txt  README.md  ai.txt  cdn.txt  cdn2.txt  cn.txt  tgip.txt
python/: README.md
python/convert_html_entities_in_file/: convert_html_entities_in_file.py
python/get_uuid/: get_uuid.py
python/news_60s/: news_60s.py
python/processing_cosplay_files/: processing_cosplay_files1.py  processing_cosplay_files2.py
python/wenku8/: wenku8.py
saoip/: README.md  ai.md  saoip.py
uuid/: README.md  ai.md  get-uuid.py
yasuo/: README.md  yasuo.ps1
